--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -15,7 +15,7 @@ jobs:
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
         with:
-          target_branch: react
+          target_branch: gh-pages
           build_dir: ./.storybook/static
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
